[tool.poetry]
name = "cameo"
version = "0.7.0"
description = "cameo - computer aided metabolic engineering & optimization. An unofficial port to py2/3 compatible version."
authors = ["Nikolaus Sonnenschein <niko.sonnenschein@gmail.com>",
    "Joao Cardoso", 
    "Emre Özdemir", 
    "Kristian Jensen"]
homepage = "http://cameo.bio"
license = "Apache License Version 2.0"

[tool.poetry.dependencies]
python = "^2.7 || ^3.5.2"
numpy = ">=1.9.1"
scipy = ">=0.14.0"
blessings = ">=1.5.1"
pandas = ">=0.24.0"
ordered-set = ">=1.2"
cobra = ">=0.11.1"
future = ">=0.15.2"
optlang = ">=1.2.1"
numexpr = ">=2.4"
requests = ">=2.10.0"
networkx = "1.9.1"
IProgress = ">=0.4"
inspyred = ">=1.0"
lazy-object-proxy = ">=1.2.0"
palettable = ">=2.1.1"
gnomic = "1.0.1"
openpyxl = ">=2.4.5"
click = ">=6.7"
bokeh = "<=0.12.1"
plotly = ">=3.0.0"
lxml = ">=3.6.0"
pytest-cov = "^2.8.1"
pytest-benchmark = "^3.2.3"
python-libsbml = ">=5.13.0"
nbformat = [
    {version = "^4.4", python = "^2.7"},
    {version = "^5.0.2", python = "^3.5"}
]
jupyter = ">=1.0.0"
ipywidgets = ">=4.1.1"
escher = "<=1.6.0"
pyyaml = ">=5.3"

# Optional dependencies
# see https://python-poetry.org/docs/pyproject/#extras
Sphinx = { version = ">=1.3.5", optional = true }
numpydoc = { version = ">=0.5", optional = true }

ipyparallel = { version = ">=5.0.1", optional = true }
redis = { version = ">=2.10.5", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "numpydoc"]
parallel = ["redis", "ipyparallel"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
